--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 file.reference.syntheticaWhiteVision.jar=C:\\Users\\admin\\Documents\\NetBeansProjects
-user.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\7.2\\build.properties
+user.properties.file=/home/dampyre/.netbeans/7.2/build.properties
