--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,6 +25,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/controlCalidad.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql-connector-java-5.0.8-bin.jar=C:\\Users\\admin\\Desktop\\mysql-connector-java-5.0.8\\mysql-connector-java-5.0.8-bin.jar
 file.reference.synthetica.jar-1=lookandfeel\\synthetica.jar
 file.reference.syntheticaBlackMoon.jar-1=lookandfeel\\syntheticaBlackMoon.jar
 file.reference.syntheticaWhiteVision.jar=/home/dampyre/netbeans-7.2/lookandfeel/syntheticaWhiteVision.jar
@@ -35,7 +36,8 @@ javac.classpath=\
     ${file.reference.synthetica.jar-1}:\
     ${file.reference.syntheticaBlackMoon.jar-1}:\
     ${libs.swing-layout.classpath}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-java-5.0.8-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
